--- a/package.json
+++ b/package.json
@@ -21,8 +21,12 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "admin-lte": "^2.4.2",
     "angular2-moment": "^1.7.0",
+    "bootstrap": "^3.3.7",
     "core-js": "^2.5.1",
+    "font-awesome": "^4.7.0",
+    "jquery-slimscroll": "^1.3.8",
     "ngx-bootstrap": "^1.9.1",
     "ngx-toastr": "^6.5.0",
     "rxjs": "^5.4.2",
