--- a/package.json
+++ b/package.json
@@ -12,33 +12,34 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.3.6",
-    "@angular/common": "^4.2.4",
-    "@angular/compiler": "^4.2.4",
-    "@angular/core": "^4.2.4",
-    "@angular/forms": "^4.2.4",
-    "@angular/http": "^4.2.4",
-    "@angular/platform-browser": "^4.2.4",
-    "@angular/platform-browser-dynamic": "^4.2.4",
-    "@angular/router": "^4.2.4",
-    "admin-lte": "^2.4.2",
+    "@angular/animations": "^5.2.10",
+    "@angular/common": "^5.2.10",
+    "@angular/compiler": "^5.2.10",
+    "@angular/core": "^5.2.10",
+    "@angular/forms": "^5.2.10",
+    "@angular/http": "^5.2.10",
+    "@angular/platform-browser": "^5.2.10",
+    "@angular/platform-browser-dynamic": "^5.2.10",
+    "@angular/platform-server": "^5.2.10",
+    "@angular/router": "^5.2.10",
+    "admin-lte": "^2.4.3",
     "angular2-moment": "^1.7.0",
     "bootstrap": "^3.3.7",
-    "core-js": "^2.5.1",
+    "core-js": "^2.5.5",
     "font-awesome": "^4.7.0",
     "jquery-slimscroll": "^1.3.8",
-    "ngx-bootstrap": "^1.9.1",
-    "ngx-toastr": "^6.5.0",
-    "rxjs": "^5.4.2",
-    "zone.js": "^0.8.14"
+    "ngx-bootstrap": "^2.0.4",
+    "ngx-toastr": "^8.4.0",
+    "rxjs": "^6.0.0",
+    "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "1.3.2",
-    "@angular/compiler-cli": "^4.2.4",
-    "@angular/language-service": "^4.2.4",
-    "codelyzer": "~3.1.1",
-    "ts-node": "~3.2.0",
-    "tslint": "~5.3.2",
-    "typescript": "~2.3.3"
+    "@angular/cli": "^1.7.4",
+    "@angular/compiler-cli": "^5.2.10",
+    "@angular/language-service": "^5.2.10",
+    "codelyzer": "^4.3.0",
+    "ts-node": "^6.0.2",
+    "tslint": "^5.9.1",
+    "typescript": "^2.8.3"
   }
 }
