- Added ngx-translate.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "@angular/platform-browser-dynamic": "^5.2.10",
     "@angular/platform-server": "^5.2.10",
     "@angular/router": "^5.2.10",
+    "@ngx-translate/core": "^9.1.1",
+    "@ngx-translate/http-loader": "^2.0.1",
     "admin-lte": "^2.4.3",
     "angular2-moment": "^1.7.0",
     "bootstrap": "^3.3.7",
