--- a/package.json
+++ b/package.json
@@ -25,12 +25,12 @@
     "@ngx-translate/core": "^9.1.1",
     "@ngx-translate/http-loader": "^2.0.1",
     "admin-lte": "^2.4.3",
-    "angular2-moment": "^1.7.0",
     "bootstrap": "^3.3.7",
     "core-js": "^2.5.5",
     "font-awesome": "^4.7.0",
     "jquery-slimscroll": "^1.3.8",
     "ngx-bootstrap": "^2.0.4",
+    "ngx-moment": "^2.0.0",
     "ngx-toastr": "^8.4.0",
     "rxjs": "^5.5.6",
     "zone.js": "^0.8.26"
