--- a/package.json
+++ b/package.json
@@ -12,35 +12,49 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.10",
-    "@angular/common": "^5.2.10",
-    "@angular/compiler": "^5.2.10",
-    "@angular/core": "^5.2.10",
-    "@angular/forms": "^5.2.10",
-    "@angular/http": "^5.2.10",
-    "@angular/platform-browser": "^5.2.10",
-    "@angular/platform-browser-dynamic": "^5.2.10",
-    "@angular/platform-server": "^5.2.10",
-    "@angular/router": "^5.2.10",
+    "@angular/animations": "^6.0.2",
+    "@angular/common": "^6.0.2",
+    "@angular/compiler": "^6.0.2",
+    "@angular/core": "^6.0.2",
+    "@angular/forms": "^6.0.2",
+    "@angular/http": "^6.0.2",
+    "@angular/platform-browser": "^6.0.2",
+    "@angular/platform-browser-dynamic": "^6.0.2",
+    "@angular/platform-server": "^6.0.2",
+    "@angular/router": "^6.0.2",
     "@ngx-translate/core": "^9.1.1",
     "@ngx-translate/http-loader": "^2.0.1",
     "admin-lte": "^2.4.3",
     "bootstrap": "^3.3.7",
-    "core-js": "^2.5.5",
+    "core-js": "^2.5.6",
     "font-awesome": "^4.7.0",
     "jquery-slimscroll": "^1.3.8",
     "ngx-bootstrap": "^2.0.4",
     "ngx-moment": "^2.0.0",
-    "rxjs": "^5.5.6",
+    "rxjs": "^6.1.0",
+    "rxjs-compat": "^6.1.0",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/cli": "^1.7.4",
-    "@angular/compiler-cli": "^5.2.10",
-    "@angular/language-service": "^5.2.10",
+    "@angular-devkit/build-angular": "~0.6.3",
+    "@angular/cli": "6.0.3",
+    "@angular/compiler-cli": "^6.0.2",
+    "@angular/language-service": "^6.0.2",
+    "@types/jasmine": "^2.8.7",
+    "@types/node": "^10.1.2",
     "codelyzer": "^4.3.0",
+    "jasmine-core": "^3.1.0",
+    "jasmine-spec-reporter": "^4.2.1",
+    "karma": "^2.0.2",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-cli": "^1.0.1",
+    "karma-jasmine": "^1.1.2",
+    "karma-jasmine-html-reporter": "^1.1.0",
+    "protractor": "^5.3.2",
+    "rxjs-tslint": "^0.1.4",
     "ts-node": "^6.0.2",
-    "tslint": "^5.9.1",
-    "typescript": "^2.6.2"
+    "tslint": "^5.10.0",
+    "typescript": "^2.7.2",
+    "webpack": "^4.8.3"
   }
 }
