--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
     "rxjs-tslint": "^0.1.5",
     "ts-node": "^7.0.0",
     "tslint": "^5.11.0",
-    "typescript": "^2.9.2",
-    "webpack": "^4.16.3"
+    "typescript": "^2.9.2"
   }
 }
