--- a/appveyor.yml
+++ b/appveyor.yml
@@ -16,6 +16,9 @@ install:
  # install modules
  - npm install
  
+ # install typescript 3.1.6
+ - npm install typescript@">=3.1.1 <3.2"
+ 
 build_script: 
  - ng build --prod
 
