- Update angular to 7.2.9

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
     "enableIvy": false
   },
   "compilerOptions": {
+    "importHelpers": true,
     "outDir": "./dist/out-tsc",
     "sourceMap": false,
     "declaration": false,
