--- a/package.json
+++ b/package.json
@@ -12,49 +12,49 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.2.9",
-    "@angular/common": "^7.2.9",
-    "@angular/compiler": "^7.2.9",
-    "@angular/core": "^7.2.9",
-    "@angular/forms": "^7.2.9",
-    "@angular/http": "^7.2.9",
-    "@angular/platform-browser": "^7.2.9",
-    "@angular/platform-browser-dynamic": "^7.2.9",
-    "@angular/platform-server": "^7.2.9",
-    "@angular/router": "^7.2.9",
-    "@angular/upgrade": "^7.2.9",
-    "@ngx-translate/core": "^10.0.2",
-    "@ngx-translate/http-loader": "^3.0.1",
+    "@angular/animations": "^7.2.14",
+    "@angular/common": "^7.2.14",
+    "@angular/compiler": "^7.2.14",
+    "@angular/core": "^7.2.14",
+    "@angular/forms": "^7.2.14",
+    "@angular/http": "^7.2.14",
+    "@angular/platform-browser": "^7.2.14",
+    "@angular/platform-browser-dynamic": "^7.2.14",
+    "@angular/platform-server": "^7.2.14",
+    "@angular/router": "^7.2.14",
+    "@angular/upgrade": "^7.2.14",
+    "@ngx-translate/core": "^11.0.1",
+    "@ngx-translate/http-loader": "^4.0.0",
     "admin-lte": "^2.4.3",
-    "bootstrap": "^3.3.7",
-    "core-js": "^2.5.7",
+    "bootstrap": "^4.3.1",
+    "core-js": "^2.6.5",
     "font-awesome": "^4.7.0",
     "jquery-slimscroll": "^1.3.8",
-    "ngx-bootstrap": "^3.0.1",
-    "ngx-moment": "^3.2.0",
-    "rxjs": "^6.4.0",
-    "tslib": "^1.9.0",
-    "zone.js": "^0.8.29"
+    "ngx-bootstrap": "^4.1.1",
+    "ngx-moment": "^3.4.0",
+    "rxjs": "^6.5.1",
+    "tslib": "^1.9.3",
+    "zone.js": "^0.9.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
-    "@angular/cli": "7.3.6",
-    "@angular/compiler-cli": "^7.2.9",
-    "@angular/language-service": "^7.2.9",
-    "@types/jasmine": "^2.8.8",
-    "@types/node": "^10.5.4",
-    "codelyzer": "^4.4.2",
-    "jasmine-core": "^3.1.0",
+    "@angular-devkit/build-angular": "^0.13.8",
+    "@angular/cli": "^7.3.8",
+    "@angular/compiler-cli": "^7.2.14",
+    "@angular/language-service": "^7.2.14",
+    "@types/jasmine": "^3.3.12",
+    "@types/node": "^11.13.8",
+    "codelyzer": "^5.0.1",
+    "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "^4.2.1",
-    "karma": "^2.0.5",
+    "karma": "^4.1.0",
     "karma-chrome-launcher": "^2.2.0",
-    "karma-cli": "^1.0.1",
-    "karma-jasmine": "^1.1.2",
-    "karma-jasmine-html-reporter": "^1.2.0",
-    "protractor": "^5.4.0",
-    "rxjs-tslint": "^0.1.5",
-    "ts-node": "^7.0.0",
-    "tslint": "^5.11.0",
+    "karma-cli": "^2.0.0",
+    "karma-jasmine": "^2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "protractor": "^5.4.2",
+    "rxjs-tslint": "^0.1.7",
+    "ts-node": "^8.1.0",
+    "tslint": "^5.16.0",
     "typescript": "^3.2.4"
   }
 }
