--- a/package.json
+++ b/package.json
@@ -25,12 +25,10 @@
     "@angular/upgrade": "^7.2.14",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
-    "admin-lte": "^2.4.3",
-    "bootstrap": "^4.3.1",
     "core-js": "^2.6.5",
     "font-awesome": "^4.7.0",
-    "jquery-slimscroll": "^1.3.8",
-    "ngx-bootstrap": "^4.1.1",
+    "jquery": "^3.4.1",
+    "moment": "^2.24.0",
     "ngx-moment": "^3.4.0",
     "rxjs": "^6.5.1",
     "tslib": "^1.9.3",
@@ -46,6 +44,7 @@
     "codelyzer": "^5.0.1",
     "jasmine-core": "^3.4.0",
     "jasmine-spec-reporter": "^4.2.1",
+    "json-parse-better-errors": "^1.0.2",
     "karma": "^4.1.0",
     "karma-chrome-launcher": "^2.2.0",
     "karma-cli": "^2.0.0",
